프로그래머스 : 캐시(linkedlist // 100%)